# CrossBrowse

./: README.md  pyproject.toml
.kiro/specs/browser-automation-framework/: .config.kiro  design.md  requirements.md  tasks.md
src/browser_automation/: __init__.py  browser_launcher.py  cli.py  csv_reader.py  execution_engine.py  logging_config.py  models.py  url_validator.py
src/browser_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_browser_launcher.py  test_browser_launcher_validation.py  test_browser_type_properties.py  test_cli.py  test_concurrency_limit_properties.py  test_concurrency_properties.py  test_csv_reader.py  test_csv_reader_properties.py  test_deduplication_properties.py  test_execution_engine.py  test_failure_isolation_properties.py  test_task_matrix_properties.py  test_url_validator.py  test_url_validator_properties.py
